--- a/templates/master.html
+++ b/templates/master.html
@@ -53,6 +53,14 @@
 
     <script src='{% static "js/vendor/jquery-3.1.0.js" %}'></script>
     <script src='{% static "js/vendor/bootstrap.min.js" %}'></script>
+		<script>
+			$(function() {
+				$('form').on('submit', function(ev) {
+					$(this).find('button').disabled = true;
+					$(this).find('button').attr('disabled', 'disabled');
+				});
+			});
+		</script>
     {% block script %}{% endblock %}
 
   </body>
