--- a/campaign_management/templates/campaign_review.html
+++ b/campaign_management/templates/campaign_review.html
@@ -39,36 +39,36 @@
           <li class="list-group-item">
             <strong>From:</strong>
             {{ campaign.email_from_name}} &lt;{{campaign.email_from_email}}&gt;
-            <a href='{% url "campaign-update" campaign.id %}'><small>edit</small></a>
+            <a href='{% url "campaign-update" campaign.id %}' tabindex='1'><small>edit</small></a>
           </li>
           <li class="list-group-item">
             <strong>Reply To:</strong>
             {{campaign.email_reply_to_email}}
-            <a href='{% url "campaign-update" campaign.id %}'><small>edit</small></a>
+            <a href='{% url "campaign-update" campaign.id %}' tabindex='2'><small>edit</small></a>
           </li>
           <li class="list-group-item">
             <strong>To recipient list:</strong>
             {{ campaign.email_list }} &mdash;
             {{campaign.email_list.count_validated_subscribers|intcomma}}
             {% trans 'subscriber' %}{{campaign.email_list.count_validated_subscribers|pluralize}}
-            <a href='{% url "campaign-update" campaign.id %}'><small>edit</small></a>
+            <a href='{% url "campaign-update" campaign.id %}' tabindex='3'><small>edit</small></a>
           </li>
           <li class="list-group-item">
             <strong>Subject:</strong>
             {{ campaign.email_subject}}
-            <a href='{% url "campaign-update" campaign.id %}'><small>edit</small></a>
+            <a href='{% url "campaign-update" campaign.id %}' tabindex='4'><small>edit</small></a>
           </li>
           <li class="list-group-item text-center">
             <strong>HTML email</strong>
             <small>
-              <a href='{% url "campaign-compose-email" campaign.id %}'>edit</a>
+              <a href='{% url "campaign-compose-email" campaign.id %}' tabindex='5'>edit</a>
               &middot;
-              <a href='{% url "campaign-email-preview" campaign.id %}' target='_blank'>
+              <a href='{% url "campaign-email-preview" campaign.id %}' target='_blank' tabindex='6'>
                 view email <i class='glyphicon glyphicon-new-window' style='font-size:10px'></i>
               </a>
             </small>
             <div class='preview' style='position: relative; min-height: 600px; height:auto; overflow: hidden;margin-top:2rem;box-shadow: 0 1px 1px #969696; border-top: 1px solid #eaeaea;margin-bottom:2rem'>
-              <iframe style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;'  src='{% url "campaign-email-preview" campaign.id %}'> </iframe>
+              <iframe tabindex='-1' style='border: 0; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 10; transform: scale(0.90); transform-origin: 0 0; height: 112%; width: 112%;'  src='{% url "campaign-email-preview" campaign.id %}'> </iframe>
               <div class='cover' style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 100;'></div>
             </div>
           </li>
@@ -82,7 +82,7 @@
     <div class='col-lg-2 col-lg-offset-2 col-sm-12'>
 
       {% if campaign.email_list.count_validated_subscribers and is_from_email_verified %}
-        <a href="{% url 'campaign-list' %}" class='btn btn-default'>Save and exit</a>
+        <a href="{% url 'campaign-list' %}" class='btn btn-default' tabindex='7'>Save and exit</a>
       {% endif %}
 
     </div>
@@ -96,9 +96,9 @@
             <span class="input-group-addon" id="sizing-addon1">
               Send a test email to
             </span>
-            <input type="text" name="email" class="form-control" placeholder="your email..." value="{{user.email}}" maxlength=150/>
+            <input type="text" name="email" class="form-control" placeholder="your email..." value="{{user.email}}" maxlength=150 tabindex='7' />
             <span class="input-group-btn">
-              <button type="submit" class="btn btn-default">Send</button>
+              <button type="submit" class="btn btn-default" tabindex='8'>Send</button>
             </span>
           </div>
         </div>
@@ -122,20 +122,20 @@
             <br />
             You need at least 1 subscriber to send this email.
           </p>
-          <a href="{% url 'campaign-list' %}" class='btn btn-default'>Save and send later</a>
+          <a href="{% url 'campaign-list' %}" class='btn btn-default' tabindex='9'>Save and send later</a>
         {% elif not is_from_email_verified %}
           <p class='alert alert-warning text-left'>
           Your sender email <strong>{{campaign.email_from_email}}</strong> has not been verified yet.
             <br />
             You need to verify it to ensure an optimal email delivery to your subscribers.
             <br />
-            <a href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
+            <a href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address' tabindex='9'>Contact us</a> to verify your sender email.
           </p>
           <a href="{% url 'campaign-list' %}" class='btn btn-default'>Save and send later</a>
         {% else %}
 				<form action='{% url "campaign-send-campaign" campaign.pk %}' method='get' style='display:inline-block' id='review-form'>
 					{% csrf_token %}
-					<button class='btn btn-danger'>
+					<button class='btn btn-danger' tabindex='9'>
 							{% trans 'Send now to'%}
 							{{ campaign.email_list.count_validated_subscribers|intcomma }} {% trans 'subscriber' %}{{campaign.email_list.count_validated_subscribers|pluralize}}
 						</button>
