--- a/campaign_management/templates/campaign_header.html
+++ b/campaign_management/templates/campaign_header.html
@@ -49,7 +49,8 @@
             <input id="{{form.email_from_name.auto_id}}"
                    name="{{form.email_from_name.name}}"
                    class='form-control'
-                   tabindex='3'
+                   tabindex='1'
+									 autofocus
                    maxlength='{{form.email_from_name.field.max_length}}'
                    value='{{form.email_from_name.value|default:user.full_name}}'
                    />
@@ -64,7 +65,7 @@
           <div class="form-group">
             <label for="{{form.email_from_email.auto_id}}" class='control-label'>From email:</label>
             {% if from_emails %}
-              <select id="{{form.email_from_email.auto_id}}" class="form-control">
+              <select id="{{form.email_from_email.auto_id}}" class="form-control" tabindex='2'>
                 {% for email in from_emails %}
                   <option value='{{email}}'> {{email}} </option>
                 {% endfor %}
@@ -72,7 +73,7 @@
             {% else %}
               <div class='alert-warning alert' style='margin-bottom: 0'>
                 No email verified yet.
-                <a href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
+                <a tabindex='2' href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
               </div>
             {% endif %}
             <small class='help-block'>The email address your recipients will see in the <code>From:</code> field.</small>
@@ -99,8 +100,9 @@
           <div class="form-group">
             <label for="{{form.email_subject.auto_id}}" class='control-label'>Email subject:</label>
             <input id="{{form.email_subject.auto_id}}"
-                   name="{{form.email_subject.name}}" class='form-control' tabindex='2'
+                   name="{{form.email_subject.name}}" class='form-control'
                    maxlength='{{form.email_subject.field.max_length}}'
+                   tabindex='4'
                    placeholder='E.g: Issue #1: About this newsletter'
                    value='{{form.email_subject.value|default:""}}'/>
             <small class='text-danger'><strong>
@@ -116,7 +118,7 @@
             {% if not lists %}
               <p class='alert alert-warning'>
                 You don’t have any subscriber list yet.
-                <a href='{% url 'subscriber-management-create' %}'>Click here to create your first list &raquo;</a>
+                <a href='{% url 'subscriber-management-create' %}' tabindex='5'>Click here to create your first list &raquo;</a>
               </p>
 <!--               <textarea id='{{form.email_list.auto_id}}' class='form-control' -->
 <!--                         rows='3' placeholder='john@doe.com, John Doe -->
@@ -130,7 +132,7 @@
 <!--                 Max 100 subscribers, one subscriber per line. <a href="{% url 'subscriber-management-create' %}">Create a list for more subscribers</a>. -->
 <!--               </small> -->
             {% else %}
-                <select id="{{form.email_list.auto_id}}" name="{{form.email_list.name}}" class="form-control">
+                <select id="{{form.email_list.auto_id}}" name="{{form.email_list.name}}" class="form-control" tabindex='5'>
                 {% for list in lists %}
                 <option value='{{list.id}}' {% if list.id == campaign.email_list.id %}selected{%endif %}>
                   {{list.name}} &mdash; {{list.count_validated_subscribers}} {% trans 'subscriber' %}{{list.count_validated_subscribers|pluralize}}
@@ -146,7 +148,7 @@
         <div class='row'>
           <div class='col-lg-6 col-lg-offset-3'>
             <hr />
-            <button class='btn btn-success pull-right' {% if not lists %}disabled{% endif %}>
+            <button class='btn btn-success pull-right' {% if not lists %}disabled{% endif %} tabindex='6'>
               Next: <strong>Compose Email</strong> &raquo;
             </button>
           </div>
