--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -94,7 +94,7 @@
             {% csrf_token %}
             <input type="hidden" name="user_list" value=""/>
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <button type="button" tabindex='-1' class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <h4 class="modal-title">Please confirm subscriber deletion from {{list.name}}</h4>
             </div>
             <div class="modal-body">
@@ -106,8 +106,8 @@
               </ul>
             </div>
             <div class="modal-footer">
-              <a href='javascript:void(0)' type="button" class="btn btn-default" data-dismiss="modal">No, keep it</a>
-              <button type="submit" class="btn btn-danger">Yes, delete it</button>
+              <a href='javascript:void(0)' type="button" tabindex='2' class="btn btn-default" data-dismiss="modal">No, keep it</a>
+              <button type="submit" class="btn btn-danger" tabindex='3'>Yes, delete it</button>
             </div>
           </form>
         </div><!-- /.modal-content -->
@@ -122,7 +122,7 @@
           <form method='post' action='/'>
             {% csrf_token %}
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <button type="button" tabindex='-1' class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <h4 class="modal-title">Please confirm subscriber deletion from {{list.name}}</h4>
             </div>
             <div class="modal-body">
@@ -134,8 +134,8 @@
               </ul>
             </div>
             <div class="modal-footer">
-              <a href='javascript:void(0)' type="button" class="btn btn-default" data-dismiss="modal">No, keep it</a>
-              <a type="button" class="btn btn-danger" href="#" id="confirm_delete_subscriber_button">Yes, delete it</a>
+              <a href='javascript:void(0)' type="button" tabindex='2' class="btn btn-default" data-dismiss="modal">No, keep it</a>
+              <a type="button" class="btn btn-danger" tabindex='3' href="#" id="confirm_delete_subscriber_button">Yes, delete it</a>
             </div>
           </form>
         </div><!-- /.modal-content -->
