--- a/subscriber_management/templates/parts/list_header.html
+++ b/subscriber_management/templates/parts/list_header.html
@@ -17,5 +17,5 @@
   <span class="lead">{{list_item.count_validated_subscribers|intcomma}}</span> {% trans 'subscriber' %}{{list_item.count_validated_subscribers|pluralize}}
   <br>
   <br>
-  Homepage url: <a target="_blank" href="{% url 'subscriber-management-join' list_item.uuid %}">http://minimail.fullweb.io{% url 'subscriber-management-join' list_item.uuid %}</a>
+  Homepage url: <a target="_blank" href="{% url 'subscriber-management-join' list_item.uuid %}">{{BASE_URL}}{% url 'subscriber-management-join' list_item.uuid %}</a>
 </p>
