--- a/subscriber_management/templates/subscriber_signup_form.html
+++ b/subscriber_management/templates/subscriber_signup_form.html
@@ -16,7 +16,7 @@
     <form>
       <div class="form-group">
         <textarea rows="10" class="form-control" disabled>
-          <form method="POST" action="//minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join">
+          <form method="POST" action="{{BASE_URL}}/subscribers/list/{{list_item.uuid}}/join">
             <label for="email">Email</label>
             <input name="email" id="email" type="text" tabindex="1" value=""/>
             <div style="position: absolute; left: -5000px;">
@@ -26,7 +26,7 @@
           </form>
         </textarea>
         <textarea rows="10" class="form-control" id="signup_form_snippet" style="position: absolute; left: -9999px;">
-          <form method="POST" action="//minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join">
+          <form method="POST" action="{{BASE_URL}}/subscribers/list/{{list_item.uuid}}/join">
             <label for="email">Email</label>
             <input name="email" id="email" type="text" tabindex="1" value=""/>
             <div style="position: absolute; left: -5000px;">
@@ -43,7 +43,7 @@
     <p>Or with ajax</p>
     <pre>
         $.post(
-            'http://minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join',
+            '{{BASE_URL}}/subscribers/list/{{list_item.uuid}}/join',
             {
                 email: '',
                 '{{list_item.signup_token}}': '' //this field SHOULD always be empty!
