Add analytics_management app.

--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -24,6 +24,9 @@
         <li class='{% if 'template' in request.resolver_match.url_name %}active{% endif %}'>
           <a href="/templates">{% trans "Templates" %}</a>
         </li>
+        <li class='{% if 'template' in request.resolver_match.url_name %}active{% endif %}'>
+          <a href="/analytics">{% trans "Analytics" %}</a>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav pull-right">
