Update open rate based on delivery count.

--- a/analytics_management/templates/campaign.html
+++ b/analytics_management/templates/campaign.html
@@ -24,7 +24,7 @@
         <li><string>{% trans "Unique" %}:</strong> {{ open_rate_object.uniq }}</li>
         <li><string>{% trans "Total" %}:</strong> {{ open_rate_object.total }}</li>
     </ul>
-    <h4>{% trans "Click rate" %}: <small>{{ click_rate_object.avg }}%</small></h4>
+    <h4>{% trans "Click rate" %}:</h4>
     <ul>
         <li><string>{% trans "Unique" %}:</strong> {{ click_rate_object.uniq }}</li>
         <li><string>{% trans "Total" %}:</strong> {{ click_rate_object.total }}</li>
