--- a/subscriber_management/templates/list_settings.html
+++ b/subscriber_management/templates/list_settings.html
@@ -18,52 +18,91 @@
       </div>
     </div>
     <div class='row'>
-      <div class='col-lg-6'>
+      <div class='col-lg-6 col-lg-offset-3'>
         <br>
-        <form method="POST" class="">
+				<h4>UTM Settings <small><a href='https://blog.bufferapp.com/utm-guide' target='_blank'>what is this?</a></small></h4>
+        <form method="post" class="">
             {% csrf_token %}
-            <div class="form-group {% if form_object.email.errors %}has-error{% endif %}">
-              <label for="{{form_object.name.auto_id}}" class="control-label">{% trans 'Rename this list' %}</label>
-              <input id="{{form_object.name.auto_id}}" name="{{form_object.name.name}}" class='form-control' tabindex='0' value ="{{form_object.name.value | default_if_none:""}}" required/>
-              {% for error in form_object.name.errors %}
+						<input type='hidden' id="{{form_object.name.auto_id}}" name="{{form_object.name.name}}" value ="{{form_object.name.value|default_if_none:""}}" />
+            <div class="form-group">
+              <label for="{{form_object.utm_medium.auto_id}}" class="control-label">UTM medium</label>
+              <input id="{{form_object.utm_medium.auto_id}}" name="{{form_object.utm_medium.name}}" class='form-control' tabindex='0' value ="{{form_object.utm_medium.value | default_if_none:""}}"/>
+              {% for error in form_object.utm_medium.errors %}
                 <span class="error-block">{{error}}</span>
               {% endfor %}
               <small class='help-block'>
+								The <code>utm_medium</code> indicates how is the traffic coming
+								to the destination page. Ex: <code>email</code>
+              </small>
+            </div>
+            <div class="form-group">
+              <label for="{{form_object.utm_source.auto_id}}" class="control-label">UTM source</label>
+              <input id="{{form_object.utm_source.auto_id}}" name="{{form_object.utm_source.name}}" class='form-control' tabindex='0' value ="{{form_object.utm_source.value | default_if_none:""}}" />
+              {% for error in form_object.utm_source.errors %}
+                <span class="error-block">{{error}}</span>
+              {% endfor %}
+              <small class='help-block'>
+								The <code>utm_source</code> indicates where the traffic is coming from. Ex: <code>{{ form_object.utm_source.value|default:"newsletter" }}</code> (your newsletter title)
+              </small>
+            </div>
+          <button type="submit" class="btn btn-success">{% trans 'Update UTM settings' %}</button>
+					<br />
+					<br />
+					<div class='alert alert-info small'>
+						The other UTM settings, <code>utm_campaign</code> and <code>utm_content</code> are relative to the email you send.
+						You can set them when preparing your email, at the review step.
+					</div>
+        </form>
+        <br />
+        <hr>
+				<h4>List Name</h4>
+        <form method="post" class="">
+            {% csrf_token %}
+						<input type='hidden' name="{{form_object.utm_source.name}}" value ="{{form_object.utm_source.value|default_if_none:""}}" />
+						<input type='hidden' name="{{form_object.utm_medium.name}}" value ="{{form_object.utm_medium.value|default_if_none:""}}" />
+            <div class="form-group {% if form_object.name.errors %}has-error{% endif %}">
+              <label for="{{form_object.name.auto_id}}" class="control-label">{% trans 'Rename this list' %}</label>
+              <input id="{{form_object.name.auto_id}}" name="{{form_object.name.name}}" class='form-control' tabindex='0' value ="{{form_object.name.value | default_if_none:""}}" required />
+              {% for error in form_object.name.errors %}
+                <span class="error-block">{{error}}</span>
+              {% endfor %}
+              <small class='text-muted'>
                 This name is only visible to you. Go to your <a href='{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid  %}'>newsletter homepage</a> for public settings.
               </small>
             </div>
-          <button type="submit" class="btn btn-default">{% trans 'Update' %}</button>
+          <button type="submit" class="btn btn-success">{% trans 'Rename list' %}</button>
         </form>
+        <br />
         <hr>
-          <div class="form-group">
-            <label for="" class="control-label">{% trans 'From email' %}</label>
-            <p>
-              {% if list_item.from_email %}
-                {{list_item.from_email}}
-                <br />
-                {% if list_item.from_email_verified %}
-                  <span class='label label-success'>Verified</span>
-                  {% else %}
-                  <span class='label label-danger'>Not verified yet</span>
-                  <a href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
-                {% endif %}
-              {% else %}
-                <div class='alert-warning alert' style='margin-bottom: 0'>
-                  No email verified yet.
-                  <a href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
-                </div>
-              {% endif %}
-            </p>
-            <small class='help-block'>The email address your recipients will see in the <code>From:</code> field.</small>
-          </div>
-        {% for error in form_object.name.errors %}
-          <span class="error-block text-danger">{{error}}</span>
-        {% endfor %}
+				<h4>Sender Email</h4>
+				<div class="form-group">
+					<label for="" class="control-label">{% trans 'From email' %}</label>
+					<p>
+						{% if list_item.from_email %}
+							{{list_item.from_email}}
+							<br />
+							{% if list_item.from_email_verified %}
+								<span class='label label-success'>Verified</span>
+								{% else %}
+								<span class='label label-danger'>Not verified yet</span>
+								<a href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
+							{% endif %}
+						{% else %}
+							<div class='alert-warning alert' style='margin-bottom: 0'>
+								No email verified yet.
+								<a href='mailto:julien@nepsilon.net?subject=Minimail - Please verify this email address'>Contact us</a> to verify your sender email.
+							</div>
+						{% endif %}
+					</p>
+					<small class='help-block'>The email address your recipients will see in the <code>From:</code> field.</small>
+				</div>
+        <br />
         <hr>
+				<h4>Danger Zone</h4>
         <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#subscriber_list_delete_confirmation">
           {% if list_item.count_validated_subscribers %}
             {% trans 'Delete this list' %}
-            ({{list_item.count_validated_subscribers|intcomma}} {% trans 'subscribers' %})
+            ({{list_item.count_validated_subscribers|intcomma}} {% trans 'subscriber' %}{{item.count_validated_subscribers|pluralize}})
           {% else %}
             {% trans 'Delete this list' %}
           {% endif %}
@@ -76,21 +115,21 @@
   <div id='subscriber_list_delete_confirmation' class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <form method='POST' action="{% url 'subscriber-management-list-delete' list_item.uuid %}">
+        <form method='post' action="{% url 'subscriber-management-list-delete' list_item.uuid %}">
           {% csrf_token %}
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Please confirm deletion of {{list_item.name}}</h4>
+            <h4 class="modal-title">WARNING: You are about to delete this list</h4>
           </div>
           <div class="modal-body">
             <p>
-              <strong>Are you sure you want to delete {{list_item.name}}?</strong>
+              <strong>Are you sure you want to delete the list "{{list_item.name}}"?</strong>
             </p>
             <ul>
               <li>{{list_item.count_validated_subscribers|intcomma}} {% trans 'subscribers will be deleted forever' %}.</li>
             </ul>
             <ul>
-              <li>This newsletter list won't be able to accept new subscribers.</li>
+              <li>This newsletter list won't be able to accept any new subscribers.</li>
             </ul>
             <ul>
               <li>All sign-up form integrations (if any) will stop working.</li>
